# break-the-code

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
benchmark/: .env.example  README.md  pyproject.toml
benchmark/data/tasks/: ecvebench-accumulo-001.json  ecvebench-activemq-apollo-001.json  ecvebench-actix-net-001.json  ecvebench-actix-net-002.json  ecvebench-admidio-001.json  ecvebench-adodb-002.json  ecvebench-adodb-003.json  ecvebench-adplug-001.json  ecvebench-airflow-001.json  ecvebench-airflow-002.json  ecvebench-ajax-net-professional-001.json  ecvebench-alist-001.json  ecvebench-alist-002.json  ecvebench-amazon-redshift-jdbc-driver-001.json  ecvebench-android-gif-drawable-001.json  ecvebench-answer-001.json  ecvebench-application-changerequest-001.json  ecvebench-apptainer-001.json  ecvebench-asciidoctor-include-ext-001.json  ecvebench-asteval-001.json  ecvebench-aubio-001.json  ecvebench-aubio-002.json  ecvebench-ausf-001.json  ecvebench-authelia-001.json  (+441 more)
benchmark/docs/: curation.md
benchmark/examples/: ecvebench-filebrowser-001-L0.input.json  ecvebench-filebrowser-001-L1.input.json  ecvebench-filebrowser-001-L2.input.json  ecvebench-filebrowser-001-L3.input.json  ecvebench-filebrowser-001.task.json
benchmark/harness/: __init__.py  generate_input.py
benchmark/pipeline/: README.md  __init__.py  cleanup_sessions.py  dispatch_devin.py  filter_advisories.py  select_candidates.py
benchmark/schema/: agent_input.schema.json  metadata.schema.json  output.schema.json  task.schema.json
benchmark/scorer/: __init__.py  score.py
(+591 files in other folders)
